# NQL

./: test.ipynb
AdventureWorks-oltp-install-script/: install.sql
NQL_AI_Agent/: pyproject.toml
NQL_AI_Agent/NQL_AI_Agent/: main.py  prompt_processor.py  server.py
NQL_AI_Agent/NQL_AI_Agent/modules/: charts.py  db.py  llm.py
backups/: llm_backup_1_28_2024.txt  main_backup_1_28_2024.txt
